syntax = "proto3";

option csharp_namespace = "Discount.Grpc.Protos";

package Coupons;

// service definition.
service Coupons {
    rpc GetCoupon (GetCouponRequest) returns (CouponModel);
    rpc CreateCoupon (CreateCouponRequest) returns (CouponModel);
    rpc UpdateCoupon (UpdateCouponRequest) returns (CouponModel);
    rpc DeleteCoupon (DeleteCouponRequest) returns (DeleteCouponResponse);
}

message GetCouponRequest {
  string productName = 1;
}

message CouponModel {
    int32 Id=1;
    string ProductName=2;
    string Description=3;
    double Amount=4;
}

message CreateCouponRequest {
    CouponModel coupon = 1;
}

message UpdateCouponRequest {
    CouponModel coupon = 1;
}

message DeleteCouponRequest {
    string productName = 1;
}

message DeleteCouponResponse {
    bool success = 1;
}
